--- a/Clasificador mensajes.ipynb
+++ b/Clasificador mensajes.ipynb
@@ -11,7 +11,8 @@
     "from datetime import datetime, timezone, timedelta\n",
     "import mysql.connector #pip install mysql.connector\n",
     "import pytz\n",
-    "cordoba_tz = pytz.timezone('America/Argentina/Cordoba') # Definir zona horaria"
+    "cordoba_tz = pytz.timezone('America/Argentina/Cordoba') # Definir zona horaria\n",
+    "from sentiment_analysis_spanish import sentiment_analysis"
    ]
   },
   {
@@ -22,7 +23,7 @@
    "outputs": [],
    "source": [
     "# Conectarse a la base de datos\n",
-    "def load_message_db(id_mensaje, id_chat, texto, usuario, fecha_hora):\n",
+    "def load_message_db(id_mensaje, id_chat, texto, usuario, fecha_hora, clasificacion):\n",
     "    # crear conector\n",
     "    mydb = mysql.connector.connect(\n",
     "        host=\"db-interop-gestion-instance-1.crssqp6kq2v3.us-east-1.rds.amazonaws.com\",\n",
@@ -34,10 +35,10 @@
     "    cursor = mydb.cursor()\n",
     "    # Hacer insert\n",
     "    sql = '''INSERT INTO mensajes_texto \n",
-    "    (id_mensaje, id_chat, texto, usuario, fecha_hora) \n",
-    "    VALUES (%s, %s, %s, %s, %s)'''\n",
+    "    (id_mensaje, id_chat, texto, usuario, fecha_hora, clasificacion) \n",
+    "    VALUES (%s, %s, %s, %s, %s, %s)'''\n",
     "    # Tupla de valores para la consulta\n",
-    "    values = (id_mensaje, id_chat, texto, usuario, fecha_hora)\n",
+    "    values = (id_mensaje, id_chat, texto, usuario, fecha_hora, clasificacion)\n",
     "    # Ejecutar la consulta con los valores como parámetros\n",
     "    cursor.execute(sql, values)\n",
     "    mydb.commit()\n",
@@ -49,6 +50,48 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "6e4dea85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/usuario/anaconda3/lib/python3.11/site-packages/sklearn/base.py:347: InconsistentVersionWarning: Trying to unpickle estimator CountVectorizer from version 0.23.2 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "/home/usuario/anaconda3/lib/python3.11/site-packages/sklearn/base.py:347: InconsistentVersionWarning: Trying to unpickle estimator MultinomialNB from version 0.23.2 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crea clasificador\n",
+    "sentiment = sentiment_analysis.SentimentAnalysisSpanish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c2e66636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analize_text(texto):\n",
+    "    analisis = sentiment.sentiment(texto)\n",
+    "    analisis = 1 - analisis\n",
+    "    clasif = \"neutro\"\n",
+    "    if(analisis >= 0.7):\n",
+    "        clasif = \"negativo\"\n",
+    "    if(analisis <= 0.3):\n",
+    "        clasif = \"positivo\"\n",
+    "    return clasif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "517bfe6f",
    "metadata": {},
    "outputs": [],
@@ -60,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "d301ba03",
    "metadata": {},
    "outputs": [],
@@ -72,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "9ed9c768",
    "metadata": {},
    "outputs": [],
@@ -95,7 +138,9 @@
     "        first_name = user.first_name\n",
     "        last_name = user.last_name if user.last_name else \"\"\n",
     "        user_info = f\"{first_name}{last_name}\" if (first_name or last_name) else \"Sin Nombre\"\n",
-    "    load_message_db(message_id, chat_id, text, user_info, date)"
+    "    # Clasificar mensaje\n",
+    "    clasificacion = analize_text(text)\n",
+    "    load_message_db(message_id, chat_id, text, user_info, date, clasificacion)"
    ]
   },
   {
