--- a/Clasificador mensajes.ipynb
+++ b/Clasificador mensajes.ipynb
@@ -3,21 +3,58 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6a92cf31",
+   "id": "6330f03a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import telebot #pip install pyTelegramBotAPI\n",
-    "from datetime import datetime, timezone, timedelta\n",
-    "import mysql.connector #pip install mysql.connector\n",
-    "import pytz\n",
-    "cordoba_tz = pytz.timezone('America/Argentina/Cordoba') # Definir zona horaria\n",
-    "from sentiment_analysis_spanish import sentiment_analysis"
+    "# Instalar librerias\n",
+    "#!pip install pyTelegramBotAPI\n",
+    "#!pip install mysql.connector\n",
+    "#!pip install configparser\n",
+    "#!pip install sentiment-analysis-spanish\n",
+    "#!pip install keras tensorflow"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "6a92cf31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importar librerias necesarias\n",
+    "import telebot \n",
+    "import mysql.connector \n",
+    "import configparser\n",
+    "import pytz\n",
+    "from datetime import datetime, timezone, timedelta\n",
+    "from sentiment_analysis_spanish import sentiment_analysis "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9e6382c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crea un objeto ConfigParser y lee el archivo conexiones.properties\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read('conexiones.properties')\n",
+    "# Accede a los valores de contexto\n",
+    "TELEGRAM_TOKEN = config.get('DEFAULT', 'TELEGRAM_TOKEN')\n",
+    "DB_HOST = config.get('DEFAULT', 'DB_HOST')\n",
+    "DB_USER = config.get('DEFAULT', 'DB_USER')\n",
+    "DB_PASS = config.get('DEFAULT', 'DB_PASS')\n",
+    "DB_NAME = config.get('DEFAULT', 'DB_NAME')\n",
+    "TIME_ZONE = config.get('DEFAULT', 'TIME_ZONE')\n",
+    "# Definir zona horaria\n",
+    "tz = pytz.timezone(TIME_ZONE) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "e21ad26d",
    "metadata": {},
    "outputs": [],
@@ -26,10 +63,10 @@
     "def load_message_db(id_mensaje, id_chat, texto, usuario, fecha_hora, clasificacion):\n",
     "    # crear conector\n",
     "    mydb = mysql.connector.connect(\n",
-    "        host=\"db-interop-gestion-instance-1.crssqp6kq2v3.us-east-1.rds.amazonaws.com\",\n",
-    "        user=\"admin\",\n",
-    "        password=\"EPXf2NVXzYi7\",\n",
-    "        database=\"telegram\"\n",
+    "        host=DB_HOST,\n",
+    "        user=DB_USER,\n",
+    "        password=DB_PASS,\n",
+    "        database=DB_NAME\n",
     "    )\n",
     "    # Crear un cursor para ejecutar consultas\n",
     "    cursor = mydb.cursor()\n",
@@ -49,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6e4dea85",
    "metadata": {},
    "outputs": [
@@ -57,10 +94,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/usuario/anaconda3/lib/python3.11/site-packages/sklearn/base.py:347: InconsistentVersionWarning: Trying to unpickle estimator CountVectorizer from version 0.23.2 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "C:\\Users\\fabio\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator CountVectorizer from version 0.23.2 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n",
-      "/home/usuario/anaconda3/lib/python3.11/site-packages/sklearn/base.py:347: InconsistentVersionWarning: Trying to unpickle estimator MultinomialNB from version 0.23.2 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "C:\\Users\\fabio\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator MultinomialNB from version 0.23.2 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n"
      ]
@@ -73,37 +110,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c2e66636",
    "metadata": {},
    "outputs": [],
    "source": [
     "def analize_text(texto):\n",
+    "    texto = texto.strip()\n",
+    "    if len(texto) < 5:\n",
+    "        return 0\n",
     "    analisis = sentiment.sentiment(texto)\n",
     "    analisis = 1 - analisis\n",
-    "    clasif = \"neutro\"\n",
-    "    if(analisis >= 0.7):\n",
-    "        clasif = \"negativo\"\n",
-    "    if(analisis <= 0.3):\n",
-    "        clasif = \"positivo\"\n",
-    "    return clasif"
+    "    analisis = float(analisis)\n",
+    "    #clasif = \"neutro\"\n",
+    "    #if(analisis >= 0.7):\n",
+    "    #    clasif = \"negativo\"\n",
+    "    #if(analisis <= 0.3):\n",
+    "    #    clasif = \"positivo\"\n",
+    "    return analisis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "517bfe6f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Crea la instancia del bot\n",
-    "bot_token = '6794338457:AAEKvwMr7Ql6PrDVBYrhMHFoWIKRHtHzJaU'\n",
+    "bot_token = TELEGRAM_TOKEN\n",
     "bot = telebot.TeleBot(bot_token)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "d301ba03",
    "metadata": {},
    "outputs": [],
@@ -115,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "9ed9c768",
    "metadata": {},
    "outputs": [],
@@ -127,7 +168,7 @@
     "    message_id = message.message_id\n",
     "    chat_id = message.chat.id \n",
     "    text = message.text\n",
-    "    fecha_hora_actual = datetime.now(cordoba_tz)\n",
+    "    fecha_hora_actual = datetime.now(tz)\n",
     "    date = fecha_hora_actual.strftime('%Y-%m-%d %H:%M:%S')\n",
     "    user = message.from_user\n",
     "    username = user.username\n",
@@ -138,6 +179,7 @@
     "        first_name = user.first_name\n",
     "        last_name = user.last_name if user.last_name else \"\"\n",
     "        user_info = f\"{first_name}{last_name}\" if (first_name or last_name) else \"Sin Nombre\"\n",
+    "    user_info = user_info.strip()\n",
     "    # Clasificar mensaje\n",
     "    clasificacion = analize_text(text)\n",
     "    load_message_db(message_id, chat_id, text, user_info, date, clasificacion)"
