--- a/Ejecutables/Clasificador.ipynb
+++ b/Ejecutables/Clasificador.ipynb
@@ -20,21 +20,7 @@
    "execution_count": 2,
    "id": "6a92cf31",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpytz\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datetime, timezone, timedelta\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msentiment_analysis_spanish\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m sentiment_analysis \n",
-      "File \u001b[0;32m/usr/local/lib/python3.8/site-packages/sentiment_analysis_spanish/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m sentiment_analysis\n",
-      "File \u001b[0;32m/usr/local/lib/python3.8/site-packages/sentiment_analysis_spanish/sentiment_analysis.py:4\u001b[0m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m confusion_matrix, f1_score\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeature_extraction\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CountVectorizer\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnaive_bayes\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MultinomialNB\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importar librerias necesarias\n",
     "import telebot \n",
@@ -47,28 +33,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9e6382c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Crea un objeto ConfigParser y lee el archivo conexiones.properties\n",
     "config = configparser.ConfigParser()\n",
-    "config.read('conexiones.properties')\n",
+    "config.read('Local/conexiones.properties')\n",
     "# Accede a los valores de contexto\n",
-    "TELEGRAM_TOKEN = config.get('DEFAULT', 'TELEGRAM_TOKEN')\n",
-    "DB_HOST = config.get('DEFAULT', 'DB_HOST')\n",
-    "DB_USER = config.get('DEFAULT', 'DB_USER')\n",
-    "DB_PASS = config.get('DEFAULT', 'DB_PASS')\n",
-    "DB_NAME = config.get('DEFAULT', 'DB_NAME')\n",
-    "TIME_ZONE = config.get('DEFAULT', 'TIME_ZONE')\n",
-    "# Definir zona horaria\n",
-    "tz = pytz.timezone(TIME_ZONE) "
+    "TELEGRAM_TOKEN = config.get('PRUEBA', 'TELEGRAM_TOKEN')\n",
+    "TELEGRAM_BOT_NAME = config.get('PRUEBA', 'TELEGRAM_BOT_NAME')\n",
+    "botname = TELEGRAM_BOT_NAME\n",
+    "DB_HOST = config.get('PRUEBA', 'DB_HOST')\n",
+    "DB_USER = config.get('PRUEBA', 'DB_USER')\n",
+    "DB_PASS = config.get('PRUEBA', 'DB_PASS')\n",
+    "DB_NAME = config.get('PRUEBA', 'DB_NAME')\n",
+    "TIME_ZONE = config.get('PRUEBA', 'TIME_ZONE')\n",
+    "tz = pytz.timezone(TIME_ZONE) # Definir zona horaria"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e21ad26d",
    "metadata": {},
    "outputs": [],
@@ -86,10 +73,10 @@
     "    cursor = mydb.cursor()\n",
     "    # Hacer insert\n",
     "    sql = '''INSERT INTO mensajes_texto \n",
-    "    (id_mensaje, id_chat, texto, usuario, fecha_hora, clasificacion) \n",
-    "    VALUES (%s, %s, %s, %s, %s, %s)'''\n",
+    "    (id_mensaje, id_chat, texto, usuario, fecha_hora, clasificacion, bot_proyecto) \n",
+    "    VALUES (%s, %s, %s, %s, %s, %s, %s)'''\n",
     "    # Tupla de valores para la consulta\n",
-    "    values = (id_mensaje, id_chat, texto, usuario, fecha_hora, clasificacion)\n",
+    "    values = (id_mensaje, id_chat, texto, usuario, fecha_hora, clasificacion, botname)\n",
     "    # Ejecutar la consulta con los valores como parámetros\n",
     "    cursor.execute(sql, values)\n",
     "    mydb.commit()\n",
@@ -100,10 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6e4dea85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/usuario/anaconda3/lib/python3.11/site-packages/sklearn/base.py:347: InconsistentVersionWarning: Trying to unpickle estimator CountVectorizer from version 0.23.2 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "/home/usuario/anaconda3/lib/python3.11/site-packages/sklearn/base.py:347: InconsistentVersionWarning: Trying to unpickle estimator MultinomialNB from version 0.23.2 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Crea clasificador\n",
     "sentiment = sentiment_analysis.SentimentAnalysisSpanish()"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c2e66636",
    "metadata": {},
    "outputs": [],
@@ -123,17 +123,12 @@
     "    analisis = sentiment.sentiment(texto)\n",
     "    analisis = 1 - analisis\n",
     "    analisis = float(analisis)\n",
-    "    #clasif = \"neutro\"\n",
-    "    #if(analisis >= 0.7):\n",
-    "    #    clasif = \"negativo\"\n",
-    "    #if(analisis <= 0.3):\n",
-    "    #    clasif = \"positivo\"\n",
     "    return analisis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "517bfe6f",
    "metadata": {},
    "outputs": [],
@@ -145,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d301ba03",
    "metadata": {},
    "outputs": [],
@@ -157,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9ed9c768",
    "metadata": {},
    "outputs": [],
@@ -214,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
